--- a/index.html
+++ b/index.html
@@ -4,13 +4,18 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Todolist</title>
+    <title>Toboolist</title>
     <link rel="stylesheet" href="./css/style.css">
 </head>
 
 <body>
 
     <header id="app_header">
+        <div class="logo">
+            <img src="./img/logo copia.png" alt="logo Boolean" class="logo_img">
+            <span class="logo_title">Toboolist</span>
+        </div>
+        <!-- /.logo -->
 
     </header>
     <!-- /#app_header -->
