--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Toboolist</title>
+    <!-- logo barra di ricerca -->
+    <link rel="icon" href="./img/Logo.png">
+    <!-- collegamento css -->
     <link rel="stylesheet" href="./css/style.css">
 </head>
 
@@ -12,7 +15,7 @@
 
     <header id="app_header">
         <div class="logo">
-            <img src="./img/logo copia.png" alt="logo Boolean" class="logo_img">
+            <img src="./img/logo_copia.png" alt="logo Boolean" class="logo_img">
             <span class="logo_title">Toboolist</span>
         </div>
         <!-- /.logo -->
@@ -21,6 +24,90 @@
     <!-- /#app_header -->
 
     <main id="app_main">
+
+        <div class="head_container">
+            <span class="add_task">
+                Add Task
+            </span>
+            <span class="add_section">
+                Add Secontion
+            </span>
+        </div>
+        <!-- /.head_container -->
+
+        <div class="main_container">
+
+            <div class="task">
+                <h3>&#9660;New Task</h3>
+                <table>
+                    <tbody>
+                        <tr>
+                            <td>
+                                <input type="checkbox" checked>
+                                <span>quarterly newsletter</span>
+                                <span class="editorial">
+                                    Editorial
+                                </span>
+                            </td>
+                        </tr>
+                    </tbody>
+                </table>
+            </div>
+            <!-- /.task -->
+
+            <div class="today">
+                <h3>&#9660;Today</h3>
+                <table>
+                    <tbody>
+                        <tr>
+                            <td>
+                                <input type="checkbox" checked>
+                                <span>quarterly newsletter</span>
+                                <span class="editorial">
+                                    Editorial
+                                </span>
+                            </td>
+                        </tr>
+                        <tr>
+                            <td>
+                                <input type="checkbox" name="" id="" checked>
+                                <span>quarterly newsletter</span>
+                                <span class="editorial">
+                                    Editorial
+                                </span>
+                            </td>
+                        </tr>
+                        <tr>
+                            <td>
+                                <input type="checkbox" name="" id="" checked>
+                                <span>quarterly newsletter</span>
+                                <span class="editorial">
+                                    Editorial
+                                </span>
+                            </td>
+                        </tr>
+                        <tr>
+                            <td>
+                                <input type="checkbox" name="" id="" checked>
+                                <span>quarterly newsletter</span>
+                                <span class="editorial">
+                                    Editorial
+                                </span>
+                            </td>
+                        </tr>
+                    </tbody>
+                </table>
+            </div>
+            <!-- /.today -->
+
+            <div class="upcoming">
+
+            </div>
+            <!-- /.upcoming -->
+
+        </div>
+        <!-- /.main_container -->
+
 
     </main>
     <!-- /#app_main -->
