--- a/index.html
+++ b/index.html
@@ -26,12 +26,15 @@
     <main id="app_main">
 
         <div class="head_container">
-            <span class="add_task">
-                Add Task
-            </span>
-            <span class="add_section">
+
+            <button class="add_task">
+                Add task
+            </button>
+
+            <button class="add_section">
                 Add Secontion
-            </span>
+            </button>
+
         </div>
         <!-- /.head_container -->
 
