--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
                         </tr>
                         <tr>
                             <td>
-                                <input type="checkbox" name="" id="" checked>
+                                <input type="checkbox" checked>
                                 <span>quarterly newsletter</span>
                                 <span class="editorial">
                                     Editorial
@@ -82,7 +82,7 @@
                         </tr>
                         <tr>
                             <td>
-                                <input type="checkbox" name="" id="" checked>
+                                <input type="checkbox" checked>
                                 <span>quarterly newsletter</span>
                                 <span class="editorial">
                                     Editorial
@@ -91,7 +91,7 @@
                         </tr>
                         <tr>
                             <td>
-                                <input type="checkbox" name="" id="" checked>
+                                <input type="checkbox" checked>
                                 <span>quarterly newsletter</span>
                                 <span class="editorial">
                                     Editorial
